--- a/templates/Header.html
+++ b/templates/Header.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <script src="/static/js/countdown.js"></script>
-    <link rel="stylesheet" type="text/css" href="/css/session.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/session.css">
     <style>
         .bottom-buffer{margin-bottom: 30px;}
         div.counter {
