--- a/templates/Tour_Round.html
+++ b/templates/Tour_Round.html
@@ -2,8 +2,8 @@
 {% block body_atr %} onload="startRoundTour();" {% endblock %}
 
 {% block additional_header %}
-    <link rel="stylesheet" href="/css/bootstrap-tour.min.css">
-    <script src="/js/bootstrap-tour.min.js"></script>
+    <link rel="stylesheet" href="/static/css/bootstrap-tour.min.css">
+    <script src="/static/js/bootstrap-tour.min.js"></script>
     <style>
     .tour-backdrop{
         opacity: .4;
