--- a/templates/InSession_Running_Main.html
+++ b/templates/InSession_Running_Main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="/css/session.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/session.css">
     <title>Round</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -13,15 +13,15 @@
     {% block additional_header %}{% endblock %}
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="/js/session_functions.js"></script>
+    <script src="/static/js/session_functions.js"></script>
 
 </head>
 
-<body onbeforeunload="return navigationWarningMessage" {% block body_atr%}{% endblock %}>
+<body onbeforeunload="return navigationWarningMessageInRound" {% block body_atr%}{% endblock %}>
 <input type="hidden" id="submitted_question_key">
 
 <div class="container-fluid">
-    <!-- session id: {{ session_key }} &nbsp round id: {{ round_key }} &nbsp session treatment: {{ session_treatment }} &nbsp round treatment id: {{ round_treatment_id }} -->
+    session id: {{ session_id }} &nbsp round id: {{ round_key }} &nbsp session_treatment: {{ session_treatment }} &nbsp round_treatment id: {{ round_treatment_key }}&nbsp  round number: {{ round_number }} &nbsp participant_session_id : {{participant_session_id}}
     {% include 'Header.html' %}
     <div class="container">
         {% if price_info is not none %}
@@ -34,17 +34,16 @@
         <div class="row">
             <div class="col-md-4 col-md-offset-4" id="round_main_div">
                 <span id="start_instructions">*Timer will start when you pick your first question</span><br>
-                <button type="button" class="btn btn-default" id="btn_easy" onclick=loadQuestionText("btn_easy","{{ round_key }}","{{ round_minutes }}","{{ step }}")>Easy</button>
-                <button type="button" class="btn btn-default" id="btn_hard" onclick=loadQuestionText("btn_hard","{{ round_key }}","{{ round_minutes }}","{{ step }}")>Hard</button>
-                <button type="button" class="btn btn-default" id="btn_stop" onclick=endRound("{{ round_key }}","{{ step }}")>Stop</button>
-
+                <button type="button" class="btn btn-default" id="btn_easy" onclick="loadQuestionText('btn_easy', '{{ round_key }}', '{{ round_minutes }}', '{{ step }}','{{session_id}}')">Easy</button>
+                <button type="button" class="btn btn-default" id="btn_hard" onclick="loadQuestionText('btn_hard', '{{ round_key }}', '{{ round_minutes }}', '{{ step }}','{{session_id}}')">Hard</button>
+                <button type="button" class="btn btn-default" id="btn_stop" onclick="endRound('{{ session_treatment }}','{{ round_key }}','{{ step }}','{{session_id}}')">Stop</button>
                 <div id="problem" class="collapse"></div>
                 <br>
                 <div id="div_input_user_answer" style="display: none">
                     <input id="input_user_answer">
                 </div>
                 <br>
-                <button type="button" class="btn btn-default" id="btn_submit" style="visibility: hidden" onclick=submitQuestionAnswer("{{ round_key }}")>Submit</button>
+                <button type="button" class="btn btn-default" id="btn_submit" style="visibility: hidden" onclick="submitQuestionAnswer('{{ round_key }}')">Submit</button>
                 <br>
             </div>
         </div>
