--- a/templates/Risk_Assessment_Results.html
+++ b/templates/Risk_Assessment_Results.html
@@ -2,8 +2,8 @@
 <html lang="en"><!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="/css/session.css">
-    <link rel="stylesheet" type="text/css" href="/css/information_styles.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/session.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/information_styles.css">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -13,7 +13,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="/js/session_functions.js"></script>
+    <script src="/static/js/session_functions.js"></script>
 
 </head>
 
