--- a/templates/Survey.html
+++ b/templates/Survey.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <link rel="stylesheet" type="text/css" href="/css/information_styles.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/information_styles.css">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -31,7 +31,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="/js/session_functions.js"></script>
+    <script src="/static/js/session_functions.js"></script>
 
 
 </head>
@@ -81,7 +81,8 @@
                 </div>
             </div>
         </form>
-        <button type="button" class="btn btn-default" id="btn_end_survey" onclick=endSurvey("{{ participant }}","{{ continue_link }}")>Continue</button>
+        <button type="button" class="btn btn-default" id="btn_end_survey" onclick="endSurvey('{{ session_id }}','{{ continue_link }}')">Continue</button>
+       <!-- <button type="button" class="btn btn-default" id="btn_end_survey" onclick="endSurvey('{{ participant }}','{{ continue_link }}')">Continue</button> -->
     </div>
 </div>
 
