--- a/templates/InSession_Running_Main.html
+++ b/templates/InSession_Running_Main.html
@@ -21,7 +21,7 @@
 <input type="hidden" id="submitted_question_key">
 
 <div class="container-fluid">
-    session id: {{ session_id }} &nbsp round id: {{ round_key }} &nbsp session_treatment: {{ session_treatment }} &nbsp round_treatment id: {{ round_treatment_key }}&nbsp  round number: {{ round_number }} &nbsp participant_session_id : {{participant_session_id}}
+    <!-- session id: {{ session_id }} &nbsp round id: {{ round_key }} &nbsp session_treatment: {{ session_treatment }} &nbsp round_treatment id: {{ round_treatment_key }}&nbsp  round number: {{ round_number }} &nbsp participant_session_id : {{participant_session_id}} -->
     {% include 'Header.html' %}
     <div class="container">
         {% if price_info is not none %}
